--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@types/react-native": "^0.73.0",
     "axios": "^1.6.7",
     "expo": "~50.0.5",
     "expo-status-bar": "~1.11.1",
-    "react": "18.2.0",
-    "react-native": "0.73.2",
+    "react": "^18.2.0",
+    "react-native": "^0.73.2",
     "react-native-maps": "1.10.0",
     "react-native-paper": "^5.12.1",
     "react-native-safe-area-context": "4.8.2",
