--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -54,3 +54,7 @@ EX_DEV_CLIENT_NETWORK_INSPECTOR=true
 
 # Use legacy packaging to compress native libraries in the resulting APK.
 expo.useLegacyPackaging=false
+
+# Fix JDK compatibility issues
+android.overridePathCheck=true
+org.gradle.java.home=JAVA_HOME
