--- a/android/build.gradle
+++ b/android/build.gradle
@@ -15,8 +15,8 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath('com.android.tools.build:gradle')
-        classpath('com.facebook.react:react-native-gradle-plugin')
+        classpath('com.android.tools.build:gradle:8.1.0')
+        classpath('com.facebook.react:react-native-gradle-plugin:0.73.2')
     }
 }
 
